# e2k

./: .gitignore  NOTE.md  README.md  acc_eval.py  accent.py  config.yaml  eval.py  export.py  extract.py  ngram.py  pyproject.toml  train.py
e2k_train/: README.md  __init__.py  accent.py  benchmark.py  eval.py  export.py  extract.py  ngram.py  pyproject.toml  train.py
src/e2k/: __init__.py  constants.py  inference.py
train/: .gitignore  NOTE.md  accent.py  benchmark.py  config.yaml  data.py  eval.py  export.py  extract.py  model.py  preprocess.py  train.py
