[project]
name = "e2k"
version = "0.6.2"
description = "A tool for automatic English to Katakana conversion"
readme = "README.md"
authors = [{ name = "Patchethium", email = "asguftuikh@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.0,<3.0"]
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["e2k_train"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
e2k = ["models/*.npz", "models/ngram.json.zip"]
