[project]
name = "e2k_train"
version = "0.6.2"
description = "Training utilities for e2k"
requires-python = ">=3.10"
dependencies = [
  "e2k",
  "numpy>=1.0,<3.0",
  "black>=25.1.0",
  "build>=1.2.2.post1",
  "einops>=0.8.1",
  "g2p-en>=2.1.0",
  "safetensors>=0.5.2",
  "tensorboard>=2.18.0",
  "torch>=2.5.0",
  "torcheval>=0.0.7",
  "tqdm>=4.67.1",
  "matplotlib>=3.10.3",
  "ipykernel>=6.29.5",
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0"]
cu121 = ["torch>=2.5.0"]
cu124 = ["torch>=2.6.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu121" }, { extra = "cu124" }]]

[tool.uv.sources]
e2k = { workspace = true }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
